# Projeto-integrador-

./: CMakeLists.txt  Proj.c  README.md  adc.c  adc.h  config.h  main.c
firmware/: CMakeLists.txt  Proj.c  adc.c  adc.h  calibracao.c  calibracao.h  config.h  lcd_i2c.c  lcd_i2c.h  main.c
solidworks/: Mont1.SLDASM  base.SLDPRT  boia.SLDPRT  bucha 10.SLDPRT  bucha 8.SLDPRT  pote 5l simulação.SLDPRT  suporte potenciometro v3.SLDPRT  suporte potenciometro.SLDPRT  tampa v3 0,1.SLDPRT  tampa v3.SLDPRT  tampa.SLDPRT
solidworks/Suporte Eletronica/: Montagem.SLDASM  chão.SLDPRT  frente.SLDPRT  lado 1.SLDPRT  lado 2.SLDPRT  prateleira 1.SLDPRT  tampa traseira.SLDPRT  teto.SLDPRT
